Remove old netstandard cruft #114

--- a/src/Lifti.Core/Lifti.Core.csproj
+++ b/src/Lifti.Core/Lifti.Core.csproj
@@ -67,12 +67,7 @@
 		</EmbeddedResource>
 	</ItemGroup>
 
-	<ItemGroup Condition="'$(TargetFramework)' == 'netstandard2'">
-		<AdditionalFiles Include="PublicAPI/netstandard2/PublicAPI.Shipped.txt" />
-		<AdditionalFiles Include="PublicAPI/netstandard2/PublicAPI.Unshipped.txt" />
-	</ItemGroup>
-
-	<ItemGroup Condition="'$(TargetFramework)' != 'netstandard2'">
+	<ItemGroup>
 		<AdditionalFiles Include="PublicAPI/PublicAPI.Shipped.txt" />
 		<AdditionalFiles Include="PublicAPI/PublicAPI.Unshipped.txt" />
 	</ItemGroup>
