Switch to dotnet publish

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -96,13 +96,13 @@ stages:
       artifact: 'packages'
 
     - task: NuGetAuthenticate@1  
-    - task: NuGetCommand@2
+      nuGetServiceCredentials: 'NuGet'
+    - task: DotNetCoreCLI@2
       displayName: 'Push NuGet Package'
       inputs:
         command: 'push'
         packagesToPush: '$(Pipeline.Workspace)/packages/ci/*.nupkg'
-        nuGetFeedType: 'external'
-        publishFeedCredentials: 'NuGet'
+        publishVstsFeed: 'NuGet'
 
 - stage: 'PublishReleaseNuGetPackage'
   displayName: 'Publish Release NuGet Package'
@@ -118,10 +118,10 @@ stages:
        deploy:
          steps:
          - task: NuGetAuthenticate@1
-         - task: NuGetCommand@2
-           displayName: 'Push NuGet Package'
-           inputs:
-             command: 'push'
-             packagesToPush: '$(Pipeline.Workspace)/packages/release/*.nupkg'
-             nuGetFeedType: 'external'
-             publishFeedCredentials: 'NuGet'
+           nuGetServiceCredentials: 'NuGet'
+          - task: DotNetCoreCLI@2
+            displayName: 'Push NuGet Package'
+            inputs:
+              command: 'push'
+              packagesToPush: '$(Pipeline.Workspace)/packages/release/*.nupkg'
+              publishVstsFeed: 'NuGet'
