--- a/test/PerformanceProfiling/PerformanceProfiling.csproj
+++ b/test/PerformanceProfiling/PerformanceProfiling.csproj
@@ -2,7 +2,7 @@
 
 	<PropertyGroup>
 		<OutputType>Exe</OutputType>
-		<TargetFrameworks>net8.0;net9.0</TargetFrameworks>
+		<TargetFrameworks>net8.0;net9.0;net10.0</TargetFrameworks>
 		<LangVersion>latest</LangVersion>
 		<Nullable>enable</Nullable>
 	</PropertyGroup>
@@ -16,8 +16,8 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="BenchmarkDotNet" Version="0.15.5" />
-		<PackageReference Include="BenchmarkDotNet.Diagnostics.Windows" Version="0.15.5" />
+		<PackageReference Include="BenchmarkDotNet" Version="0.15.6" />
+		<PackageReference Include="BenchmarkDotNet.Diagnostics.Windows" Version="0.15.6" />
 	</ItemGroup>
 
 	<ItemGroup>
