--- a/src/Lifti.Core/Lifti.Core.csproj
+++ b/src/Lifti.Core/Lifti.Core.csproj
@@ -68,8 +68,8 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<AdditionalFiles Include="PublicAPI/PublicAPI.Shipped.txt" />
-		<AdditionalFiles Include="PublicAPI/PublicAPI.Unshipped.txt" />
+		<AdditionalFiles Include="PublicApi/PublicAPI.Shipped.txt" />
+		<AdditionalFiles Include="PublicApi/PublicAPI.Unshipped.txt" />
 	</ItemGroup>
 
 </Project>
